@@ -1,2 +1,3 @@
 /Archive-Libarchive-XS-*
 /.build
+*.swp
