@@ -43,8 +43,10 @@ remove = constant
 
 [Prereqs / ConfigurePrereqs]
 -phase = configure
-Alien::Libarchive  = 0.18
-ExtUtils::CChecker = 0
+Alien::Base::Wrapper = 1.02
+Alien::Libarchive3   = 0.28
+ExtUtils::CChecker   = 0
+Capture::Tiny        = 0
 
 [Prereqs]
 Exporter::Tidy     = 0
@@ -69,3 +71,7 @@ filename = xs/ppport.h
 
 [MathInt64]
 dir = xs
+
+[Author::Plicease::TravisInstall]
+repo = Perl5-Alien/Alien-Build
+repo = plicease/Alien-Libarchive3
