@@ -39,9 +39,8 @@ be written.
 
 =item L<Archive::Libarchive::FFI>
 
-Both of these provide the same API to libarchive via L<Alien::Libarchive>,
-but the bindings are implemented in XS for one and via L<FFI::Sweet> for
-the other.
+Both of these provide the same API to libarchive but the bindings are
+implemented in XS for one and via L<FFI::Raw> for the other.
 
 =item L<Archive::Libarchive::Any>
 
