@@ -13,12 +13,6 @@ BEGIN {
 # ABSTRACT: Perl bindings to libarchive via XS
 # VERSION
 
-  unless($^O eq 'MSWin32')
-  {
-    require Alien::Libarchive;
-    Alien::Libarchive->import;
-  }
-
   require XSLoader;
   XSLoader::load('Archive::Libarchive::XS', $VERSION);
 
