@@ -1,0 +1,21 @@
+#!/bin/bash -x
+
+set -euo pipefail
+IFS=$'\n\t'
+
+rm -rf /tmp/Alien-Build /tmp/Alien-Libarchive3
+
+cpanm -n Dist::Zilla
+
+
+git clone --depth 2 https://github.com/Perl5-Alien/Alien-Build.git /tmp/Alien-Build
+cd /tmp/Alien-Build
+dzil authordeps --missing | cpanm -n
+dzil listdeps   --missing | cpanm -n
+dzil install --install-command 'cpanm -n .'
+
+git clone --depth 2 https://github.com/plicease/Alien-Libarchive3.git /tmp/Alien-Libarchive3
+cd /tmp/Alien-Libarchive3
+dzil authordeps --missing | cpanm -n
+dzil listdeps   --missing | cpanm -n
+dzil install --install-command 'cpanm -n .'
