@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Alien::Libarchive;
+use Alien::Libarchive3;
 use Test::More tests => 1;
 
 diag '';
@@ -8,14 +8,14 @@ diag '';
 diag '';
 diag '';
 
-my $alien = Alien::Libarchive->new;
+my $alien = 'Alien::Libarchive3';
 
 diag 'libarchive';
 diag '  cflags       : ', join ' ', $alien->cflags;
 diag '  libs         : ', join ' ', $alien->libs;
 diag '  install_type : ', $alien->install_type;
-diag '  dlls         : ', (eval { $alien->dlls } || 'not found');
-diag '  version      : ', (eval { $alien->version } || 'unknown');
+diag '  dlls         : ', $_ for $alien->dynamic_libs;
+diag '  version      : ', $alien->version;
 
 diag '';
 diag '';
